syntax = "proto3";

message ProtoResponse {
    message ResponseStatus {
        uint32 StatusCode = 1;
        string StatusMsg = 2;
    }

    ResponseStatus status = 1;
    bytes data = 2;
}
